module ET.Proto;

//ResponseType ObjectQueryResponse
message ObjectQueryRequest // IActorRequest
{

	int64 Key = 2;
	int64 InstanceId = 3;
}

message ObjectQueryResponse // IActorResponse
{
	bytes Entity = 4;
}


//ResponseType A2M_Reload
message M2A_Reload // IActorRequest
{

}

message A2M_Reload // IActorResponse
{
}

//ResponseType G2G_LockResponse
message G2G_LockRequest // IActorRequest
{
}

message G2G_LockResponse // IActorResponse
{
}

//ResponseType G2G_LockReleaseResponse
message G2G_LockReleaseRequest // IActorRequest
{

	int64 Id = 2;
	string Address = 3;
}

message G2G_LockReleaseResponse // IActorResponse
{

}

//ResponseType ObjectAddResponse
message ObjectAddRequest // IActorRequest
{

	int64 Key = 2;
	int64 InstanceId = 3;
}

message ObjectAddResponse // IActorResponse
{

}

//ResponseType ObjectLockResponse
message ObjectLockRequest // IActorRequest
{

	int64 Key = 2;
	int64 InstanceId = 3;
	int32 Time = 4;
}
message ObjectLockResponse // IActorResponse
{

}

//ResponseType ObjectUnLockResponse
message ObjectUnLockRequest // IActorRequest
{

	int64 Key = 2;
	int64 OldInstanceId = 3;
	int64 InstanceId = 4;
}
message ObjectUnLockResponse // IActorResponse
{

}

//ResponseType ObjectRemoveResponse
message ObjectRemoveRequest // IActorRequest
{

	int64 Key = 2;
}
message ObjectRemoveResponse // IActorResponse
{
}

//ResponseType ObjectGetResponse
message ObjectGetRequest // IActorRequest
{

	int64 Key = 2;
}
message ObjectGetResponse // IActorResponse
{
	int64 InstanceId = 4;
}


//ResponseType BM2Game_AllocSceneResponse
message Game2BM_AllocSceneRequest // IActorRequest
{
	int64 UnitId = 2;
}

message BM2Game_AllocSceneResponse // IActorResponse
{
	int64 SceneInstanceId = 4;
}

//ResponseType B2BM_AllocSceneResponse
message BM2B_AllocSceneRequest // IActorRequest
{
	int64 MasterPlayerId = 4;
}
message B2BM_AllocSceneResponse // IActorResponse
{

	int64 SceneInstanceId = 4;	
}

message B2BM_DungeonDispose // IActorMessage
{
	uint MapId = 1;
	int64 SceneInstanceId = 2;	
}